reduced the width of the header to prevent wrapping

--- a/themes/kent-news/css/all.css
+++ b/themes/kent-news/css/all.css
@@ -658,7 +658,7 @@ z-index: 10;}
 }
 
 .p-news {
-    width: 520px;
+    width: 515px;
     float: right;
 }
 
